idea/testData/multiModuleHighlighting/multiplatform/depends/jvm/jvm.kt
class <error descr="[ACTUAL_MISSING] Declaration must be marked with 'actual'">My</error>